--- a/quests.css
+++ b/quests.css
@@ -28,6 +28,7 @@ header {
 	padding-bottom: 7px;
 	font-size: 1.5em;
 	font-weight: bold;
+	color: white;
 }
 #navbar {
 	text-align: right;
@@ -45,6 +46,9 @@ header {
 	float: left;
 	font-size: .95em;
 }
+a {
+	color: black;
+}
 .navitem {
 	display: block;
 	text-align: center;
@@ -53,10 +57,10 @@ header {
 	color: white;
 	text-decoration: none;
 }
-.navitem:link, .navitem:visited {
-	background-color: #222222;
-}
 .navitem:active, .navitem:hover {
+	background-color: #333333;
+}
+.navitem-current {
 	background-color: #333333;
 }
 section {
@@ -109,6 +113,7 @@ section {
 	background-color: #DDDDDD;
 	padding: 1px;
 	margin-top: 50px;
+	border-radius: 5px;
 }
 #newQuestCount {
 	width: 40px;
@@ -116,6 +121,61 @@ section {
 }
 #newQuestButton {
 	padding: 4px;
+}
+#main {
+	margin: 0;
+}
+.alert {
+	width: 90%;
+	margin: auto;
+	padding: 5px;
+	border-radius: 5px;
+	font-size: .9em;
+	cursor: pointer;
+}
+.info {
+	background-color: #CCDDFF;
+}
+.success {
+	background-color: #DDFFCC;
+}
+.warning {
+	background-color: #FFDDCC;
+}
+form {
+	width: 400px;
+	margin: auto;
+}
+.form-label {
+	width: 100px;
+	float: left;
+	text-align: right;
+	position: relative; 
+	top: 8px;
+}
+.form-field {
+	width: 280px;
+	float: right;
+	text-align: center;
+}
+.form-field input, .form-field textarea {
+	width: 250px;
+}
+input, textarea, button {
+	padding: 5px;
+	font-size: 1em;
+	border-radius: 5px;
+	border: 1px solid #CCCCCC;
+}
+input:focus, textarea:focus {
+	outline: none;
+	box-shadow: inset 0px 0px 1px 2px #CCDDFF;
+}
+textarea {
+	height: 100px;
+}
+button:hover, input[type="submit"]:hover {
+	background-color: #CCDDFF;
 }
 footer {
 	width: 90%;
@@ -137,8 +197,8 @@ footer {
 .bold {
 	font-weight: bold;
 }
-h2 {
-	margin-left: 20px;
+.small {
+	font-size: .9em;
 }
 
 /*
